updating and adding firebase users - quite coconfusing

--- a/src/components/custom-button/custom-button.styles.css
+++ b/src/components/custom-button/custom-button.styles.css
@@ -28,5 +28,6 @@
 
 .custom-button.google-sign-in:hover {
   background-color: #357ae8;
+  border: none;
 }
 /*# sourceMappingURL=custom-button.styles.css.map */
